fixed styling on hompage to stack favorites and new refraim boxes on smaller screens and put them side by side on larger screens

--- a/src/App.css
+++ b/src/App.css
@@ -112,8 +112,42 @@ text-align: right;
   background-color: #FFCA3B;
 }
 
+.homepage-cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between; /* Adds space between the cards when side by side */
+}
+
+.homepage-cards > .MuiCard-root {
+  flex: 1; /* Takes the full available width when stacked */
+  max-width: 100%;/* Allows the cards to expand to full width of container */
+  margin: 20px; /* Adds space between cards */
+}
+
 @media only screen and (max-width: 480px) {
   .yes-no-buttons {
       display: none;
+  }
+ 
+}
+
+@media only screen and (max-width: 800px) {
+  .homepage-cards > .MuiCard-root {
+    flex: 1 1 600px; /* Sets a specific width for smaller screens */
+    max-width: 600px; /* Matches the specific width for smaller screens */
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  /* .homepage-cards {
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+    max-width: 80%;
+  } */
+
+  .homepage-cards > .MuiCard-root {
+    flex-basis: 45%;
+    
   }
 }
